# SL_Otus_basics

./: CMakeLists.txt  PreLoad.cmake  README.md
.github/workflows/: TestM1L9.yml  TestsM1L13.yml
M1L2/: CMakeLists.txt  GameParameters.cpp  GameParameters.h  GuessTheNumber.cpp  guess_the_number.cpp  hello_world.cpp
M1L2/include/: astNodeAdd.hpp  astNodeDiv.hpp  astNodeMul.hpp  astNodeSub.hpp  astNodeVar.hpp  lexer.hpp  parser.hpp
M1L2/src/: lexer.cpp  main.cpp  parser.cpp
M1L9/: CMakeLists.txt
M1L9/chrono_example/: CMakeLists.txt
M1L9/random_shuffle/: CMakeLists.txt
M1L9/statistics/: CMakeLists.txt  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Pct90.cpp  Pct90.h  Pct95.cpp  Pct95.h  Std.cpp  Std.h  statistics.cpp
M1L9/statistics.test/: CMakeLists.txt  statistics.test.cpp
M2L11/: CMakeLists.txt  MyDLList.h  MySLList.h  MyVector.h  TestMyVector.cpp
TestDllInTheMid/: CMakeLists.txt  RemoveMangling.def  TestDllInTheMid.cpp  TestDllInTheMid.h
TestExtDll/: CMakeLists.txt  Cards.cpp  Cards.h  Logger.cpp  Logger.h  RemoveMangling.def  Structs.h  TestExtDll.cpp  TestExtDll.h  Utils.cpp  Utils.h
TestExtDllTest/: CMakeLists.txt  LibFunc.cpp  LibFunc.h  TestExtDllTest.cpp  TestExtDllTest.h
Tests/: CMakeLists.txt  Test.cpp  TestMyDLList.cpp  TestMySLList.cpp  TestMyVector.cpp
src/: Cards.cpp  Cards.h  LibFunc.cpp  LibFunc.h  Logger.cpp  Logger.h  MySLList.h  MyVector.h  Structs.h  TestItem.h  Utils.cpp  Utils.h
